[HzrFilter] Rename Exploit.c to Behavior.c

--- a/HzrFilter/HzrFilter.vcxproj
+++ b/HzrFilter/HzrFilter.vcxproj
@@ -51,7 +51,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Exploit.c" />
+    <ClCompile Include="Behavior.c" />
     <ClCompile Include="Protect.c" />
     <ClCompile Include="Service.c" />
     <ClCompile Include="Utility.c" />
@@ -277,7 +277,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Context.h" />
-    <ClInclude Include="Exploit.h" />
+    <ClInclude Include="Behavior.h" />
     <ClInclude Include="Handle.h" />
     <ClInclude Include="HzrFilter.h" />
     <ClInclude Include="Protect.h" />
